--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 .cache/
 .idea/
 workdir/
+workdir
 # Python egg metadata, regenerated from source files by setuptools.
 /*.egg-info
 .eggs/
